--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [ "Development Status :: 4 - Beta",
 requires-python = ">=3.10"
 dependencies = [
     "click>=8.1.8",
+    "inotify-simple>=1.3.5",
     "pydantic>=2.10.6",
     "pyyaml>=6.0.2",
     "rich>=13.9.4",
