--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [ "Development Status :: 4 - Beta",
                 "Operating System :: OS Independent",
                 "Programming Language :: Python",
                 "Topic :: Scientific/Engineering",
-                "Private :: Do Not Upload", ]
+                ]
 requires-python = ">=3.10"
 dependencies = [
     "click>=8.1.8",
@@ -52,3 +52,9 @@ dev = [
     "sphinx>=8.1.3",
     "types-pyyaml>=6.0.12.20250326",
 ]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
